# zimlit-com-rs

./: Cargo.toml
src/: main.rs
styles/: style.css
templates/: index.html.tera  nav.html.tera
