[package]
name = "zimlit-com"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = "*"

[dependencies.rocket_contrib]
version = "0.4.7"
features = ["json", "serve", "tera_templates"]
